Fixed the logo not appearing in mobile and the biography margin issue and the scroll spy - header overlapping the titles in the mobile view

--- a/Portfolio/less/left-column.less
+++ b/Portfolio/less/left-column.less
@@ -542,9 +542,8 @@ footer{
 }
 
 /* 9. Services section ///////////////////////////*/
-.service-section
-{
-  padding-top: 0;
+.service-section {
+  // padding-top: 0;
 }
 .service-intro{
   font-size: 1.6em;
@@ -915,7 +914,9 @@ h1 .flip span.down {
     font-size: 40px;
     padding: 9px;
     width: 70%;
-    margin: auto;
+    // margin: auto;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 15px;
   }
   .polaroid
