--- a/Portfolio/less/typical.less
+++ b/Portfolio/less/typical.less
@@ -538,7 +538,9 @@ footer{
     border-top: 2px solid #000;*/
     padding: 9px;
     width: 70%;
-    margin: auto;
+    // margin: auto;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 15px;
   }
   .polaroid
